user propile pics visibility fixed

--- a/src/Components/ChatBox/ChatBox.css
+++ b/src/Components/ChatBox/ChatBox.css
@@ -52,14 +52,18 @@
 .message{
     background: #DCF8C6;
     width: fit-content;
+    max-width: 50vw;
     margin: 10px 0;
     margin-left: auto;
-    padding:2px 2px 2px 10px;
-    border-radius: 50px 50px 0 50px;
+    padding:0.1% 1% 0.2% 1%;
+    border-radius: 15px 15px 0 15px;
     font-size: 14px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.521);
     position: relative;
-    max-width: 90%;
+}
+.message>p{
+    max-width: 40vw;
+    word-wrap: break-word;
 }
 .message>div{
     min-height: 30px;
@@ -74,7 +78,7 @@
 .received{
     margin-right: auto;
     margin-left: 0;
-    border-radius: 00px 50px 50px 50px;
+    border-radius: 0px 15px 15px 15px;
     padding-right: 5px;
     background-color: var(--secondary-color);
 }
